wiki language select; new dep: boolean-like

--- a/Tombot.cabal
+++ b/Tombot.cabal
@@ -16,6 +16,7 @@ Executable tombot
     Build-Depends:
         aeson,
         attoparsec,
+        boolean-like,
         bytestring,
         base,
         case-insensitive,
