--- a/stack.yaml
+++ b/stack.yaml
@@ -2,7 +2,11 @@ flags: {}
 extra-package-dbs: []
 packages:
 - '.'
+- location:
+    git: git@github.com:Shou/boolean-like.git
+    commit: 4715d2e1ab7f2f4c0cd8773c113d495c72cee06a
 extra-deps:
 - hashmap-1.3.1.1
 - text-1.2.2.1
+- boolean-like-0.1.0.0
 resolver: lts-6.3
