bucketloads of bugfixes, discord support

--- a/Tombot.cabal
+++ b/Tombot.cabal
@@ -21,6 +21,7 @@ Executable tombot
         base,
         case-insensitive,
         containers,
+        direct-sqlite,
         directory,
         either,
         errors,
@@ -36,6 +37,7 @@ Executable tombot
         process,
         random,
         regex-compat,
+        sqlite-simple,
         stm,
         text,
         time,
