--- a/Tombot.cabal
+++ b/Tombot.cabal
@@ -42,7 +42,9 @@ Executable tombot
         text,
         time,
         transformers,
+        type-operators,
         utf8-string,
+        vector,
         websockets,
         wreq,
         wuss,
