--- a/Tombot.cabal
+++ b/Tombot.cabal
@@ -1,7 +1,7 @@
 
 Name:               Tombot
 Version:            0.3.0
-Synopsis:           The Haskell IRC bot that composes functions.
+Synopsis:           Chatbot with its own interpreted composable language.
 Author:             Shou
 Maintainer:         x@shou.io
 Copyright:          Shou
@@ -16,6 +16,7 @@ Executable tombot
     Build-Depends:
         aeson,
         attoparsec,
+        bifunctors,
         boolean-like,
         bytestring,
         base,
@@ -24,32 +25,31 @@ Executable tombot
         data-default,
         direct-sqlite,
         directory,
-        either,
         errors,
-        hashmap,
-        hint,
+        filepath,
+        lens,
+        lens-aeson,
         HTTP,
         http-types,
-        json,
-        lens,
         mtl,
         network,
         old-locale,
+        optparse-applicative,
         process,
         random,
         regex-compat,
         sqlite-simple,
         stm,
+        taggy,
+        taggy-lens,
         text,
         time,
-        transformers,
         type-operators,
         utf8-string,
         vector,
         websockets,
         wreq,
-        wuss,
-        xml
+        wuss
     Main-Is:
         Main.hs
 
